argocd-manifests/apps/nodejs-app/overlays/production/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nodejs-app-ingress
  namespace: argocd-learn
  annotations:
    cert-manager.io/issuer: "local-ca-issuer"
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - 'nodejs.argocd-learn.local'
        - '*.argocd-learn.local'
      secretName: local-tls
  rules:
  - host: nodejs.argocd-learn.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prod-nodejs-app
            port:
              number: 80
